# exoskull

./: .gitattributes  .gitignore  .vercelignore  AGENT_DONE_MODUL3.md  ALL_MIGRATIONS_COMBINED.sql  ARCHITECTURE.md  ARCHITECTURE.md.backup.20260201_025448  AUDIT_REPORT_2026-02-09.md  AUTONOMY_AUDIT.md  AUTONOMY_AUDIT_v4.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_2026-02-24.md  FULL_MIGRATION.sql  IORS_ARCHITECTURE.md  IORS_ECONOMICS.md  IORS_FRAMEWORKS.md  IORS_GAMIFICATION.md  IORS_GOVERNANCE.md  IORS_IMPLEMENTATION_PLAN.md  IORS_VISION.md  LEARNINGS.md  MVP_EXECUTION_PLAN.md  PLAN.md  PLAN_UI_UX_REBUILD.md  PRODUCT_DECISIONS_v1.md  PROJECT_STATUS.md  RAPORT_WIZJA_AUTONOMII_EXOSKULL.md  RUN_THIS_SQL.md  SESSION_LOG.md  UI_UX_REQUIREMENTS.md  URUCHOM_MIGRACJE.txt  UX_AUDIT_2026-02-17.md  WIRING_AUDIT_LAYER1_RESULTS.md  WIRING_AUDIT_LAYER2_RESULTS.md  WIRING_AUDIT_LAYER3_RESULTS.md  WIRING_AUDIT_STRATEGY.md  WYPOWIEDZI_UI_UX.md  voices.json
.claude/: settings.local.json
.husky/: pre-commit  pre-push
.tmp/: app_design_trace.md  msgs.json  msgs2.json
android/: build.gradle.kts  settings.gradle.kts
exoskull-desktop/src-tauri/: Cargo.toml  tauri.conf.json
exoskull-desktop/src-tauri/capabilities/: default.json
exoskull-desktop/src-tauri/src/: api.rs  commands.rs  lib.rs  main.rs
exoskull-desktop/src-tauri/src/assistant/: dictation.rs  mod.rs  mouse_hook.rs  tts.rs
exoskull-desktop/src-tauri/src/db/: migrations.rs  mod.rs  models.rs
exoskull-desktop/src-tauri/src/recall/: capture.rs  indexer.rs  mod.rs  sync.rs
exoskull-desktop/src-tauri/src/uploader/: mod.rs  queue.rs  upload.rs  watcher.rs
(+1918 files in other folders)
